; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_l_log.c_Log_Close.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_l_log.c_Log_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32* }

@logfile = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [22 x i8] c"no log file to close\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"can't close log file %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"Closed log %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Log_Close() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logfile, i32 0, i32 1), align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %15

5:                                                ; preds = %0
  %6 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logfile, i32 0, i32 1), align 8
  %7 = call i64 @fclose(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logfile, i32 0, i32 0), align 8
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %10)
  br label %15

12:                                               ; preds = %5
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logfile, i32 0, i32 1), align 8
  %13 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @logfile, i32 0, i32 0), align 8
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8* %13)
  br label %15

15:                                               ; preds = %12, %9, %3
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
